# formfactor-1

./: Makefile  Makefile.in  README  config.status  configure  configure.ac
lib/: Makefile  Makefile.am  Makefile.in
lib/.deps/: breit_frame.Po  common_cfg.Po  euler_angles.Po  lorentzff_PiPi.Po  pow2assert.Po  tensor.Po  wigner.Po
lib/kinematic_factors/: kinematic_factors.h  kinfac_fwd.h  kinfac_ini.h  kinfac_key.cc  kinfac_key.h  kinfacbase.h
lib/leastsquares/: linear_system.h  linear_system_holder.h
lib/polarisation/: polarisation_factory.cc  polarisation_factory.h  polarisation_factory_inventory.cc  polarisation_factory_inventory.h  polarisation_factory_keys.cc  polarisation_factory_keys.h  polarisation_jz.h  polarisationbase.h
lib/radmat/: make_head.csh
lib/radmat/construct_data/: construct.h  construct_correlators.cc  construct_correlators.h  construct_correlators_bad_data_repository.cc  construct_correlators_bad_data_repository.h  construct_correlators_subduce_utils.cc  construct_correlators_subduce_utils.h  construct_correlators_utils.cc  construct_correlators_utils.h  construct_correlators_xml.cc  construct_correlators_xml.h  construct_data.h  construct_q2_packs.h  data_tag_redstar_interface.cc  data_tag_redstar_interface.h  invert_subduction.cc  lattice_multi_data_object.h  lattice_multi_data_tag.cc  lattice_multi_data_tag.h  lattice_multi_data_tag_redstar_interface.cc  lattice_multi_data_tag_redstar_interface.h  load_fake_data.h  radmat_database_interface.cc  radmat_database_interface.h  three_point.h
lib/radmat/data_representation/: data_representation.h  data_representation_cubic_groups.cc  data_representation_cubic_groups.h  data_representation_factory.cc  data_representation_lorentz_groups.cc  data_representation_lorentz_groups.h  data_representation_prim.h  data_representation_primitive_rep.h  data_representation_subduction_map.cc  data_representation_subduction_map.h  data_representation_three_point.h  data_tag_three_point.cc  data_tag_three_point.h
lib/radmat/database/: radmat_overlap_key_val_db.h
lib/radmat/driver/: driver.h  radmat_driver.cc  radmat_driver.h  radmat_driver_aux.cc  radmat_driver_props.cc  radmat_driver_props.h  radmat_single_q2_driver.cc  radmat_single_q2_driver.h
lib/radmat/fake_data/: covarrying_vectors.cc  covarrying_vectors.h  fake.data.ini.xml  fake_3pt_function.h  fake_3pt_function_aux.cc  fake_3pt_function_aux.h  fake_data.h  fake_data_ini.cc  fake_data_ini.h  fake_overlaps.cc  fake_overlaps.h  fake_spectrum.cc  fake_spectrum.h  gen_fake_dataset.h  minimal_fake_data.h  normalize_fake_3pt_data.h
lib/radmat/ff/: LLSQSolvers.cc  LLSQSolvers.h  LLSQ_base.h  LLSQ_solver.h  common_cfg.cc  common_cfg.h  common_ensemble.h  ff.h  ff_gen_llsq_row.cc  ff_gen_llsq_row.h  formfactor_abs_base_cfg.h  formfactor_factory.cc  formfactor_factory.h  formfactor_kinematic_factors.h  formfactor_utils.h  llsq_gen_system.h  llsq_solvers.cc  llsq_solvers.h  lorentzff_PiPi.cc  lorentzff_PiPi.h  lorentzff_PiPiStar.cc  lorentzff_PiPiStar.h  lorentzff_PiRho.h  lorentzff_RhoPi.h  lorentzff_RhoRho.h  lorentzff_Wigner_D_matrix_embedding.h  lorentzff_Wigner_D_matrix_factory.cc  lorentzff_Wigner_D_matrix_factory.h  lorentzff_Wigner_D_matrix_manager.cc  lorentzff_Wigner_D_matrix_manager.h  lorentzff_canonical_JJlist_ff.h  lorentzff_canonical_PiPi.h  lorentzff_canonical_PiPiStar.h  lorentzff_canonical_PiRho.h  lorentzff_canonical_RhoPi.h  lorentzff_canonical_RhoRho.h  lorentzff_canonical_cont_spin_formfactors.h  lorentzff_canonical_frame_formfacs_rotation_manager.cc  lorentzff_canonical_frame_formfacs_rotation_manager.h  lorentzff_canonical_frame_formfactor.h  (+18 more)
lib/semble/: semble_vector.h
lib/tensor/: narray.h  narray1.h  narray_stream.h  tensor.h  tensor_algebra.cc  tensor_algebra.h  tensor_aux.h  tensor_fwd.h  tensorbase.h  test_NArray.h  test_Tensor.h  test_utils.cc  test_utils.h
lib/utils/: lorentz.cc  lorentz.h  pow2assert.cc  rodrigues_rotation_matrix.cc  rodrigues_rotation_matrix.h  stringify.h  wigner3j.h
main/: Makefile  Makefile.am  Makefile.in  check_rotations.cc  corr_norm.cc  driverProps.improved.ini.xml  driverProps.ini.xml  driverProps.old.ini.xml  driverProps.unimproved.ini.xml  fake.data.ini.xml  fake_radmat.cc  grab_ff.cc  grab_ff.ini.xml  grab_pol.cc  hello.cc  invert_subduced.cc  make_fake_database.h  mass_overlap.xml  mass_overlap_db_combine.cc  mass_overlap_db_create.cc  mass_overlap_db_util.cc  phases.cc  phases2.cc  plot_fake_3pt.cc  print_twoquark_ops.cc  radmat.cc  radmat.inikeys.xml  radmat_ff.cc  radmat_single_q2.cc  radmat_state_util.cc  radmat_util.cc  read_redstar.cc  recondb_create.cc  recondb_util.cc  single_plot.cc  single_q2.ini.xml  test_jfit.cc  test_levi_civita.cc  test_redstar_ops.cc  test_rotations.cc  (+1 more)
main/.deps/: hello.Po
main/ini_files/: driver.improved.subduce.ini.xml  driver.unimproved.lorentz.ini.xml  driver.unimproved.mixed.ini.xml  driver.unimproved.subduce.ini.xml  grab_ff.ini.xml  refit_ff.ini.xml  tmp
main/refit/: do_refit.csh
tests/: Makefile  Makefile.am  Makefile.in  test_all.pl
tests/.deps/: test.Po  test_ALL.Po  test_NArray.Po  test_Tensor.Po  test_ff_pipi.Po  test_polarisation_tensor.Po
tests/headers/: test_common.h  test_tensor.h
tests/src/: fake_3pt_play.cc  test.cc  test_LLSQ_solver.cc  test_covarrying_vector.cc  test_factories.cc  test_fake_3pt_aux.cc  test_fake_ini.cc  test_ff_pipi.cc  test_invert_subduction.cc  test_load_database.cc  test_load_fake_data.cc  test_make_fake_data_ini.cc  test_make_fake_overlaps.cc  test_make_fake_spectrum.cc  test_minimal_fake_data.cc  test_polarisation_tensor.cc  test_readers.cc  test_xml_to_redstar.cc
tests/testADATClebsch/: Makefile.am  Makefile.in  test_clebsch.cc
tests/testKinfac/: Makefile.am  Makefile.in  base_test.cc
tests/testPolarisation/: Makefile.am  Makefile.in  test_INV.cc  test_PTensor.cc  test_PVector.cc
tests/testTensor/: Makefile.am  Makefile.in  test_ALL  test_CLONE.cc  test_Levi.cc  test_NArray.cc  test_Print.cc  test_Tensor.cc
tests/testUtils/: Makefile.am  Makefile.in  test_lorentz.cc  test_rodrigues.cc
(+217 files in other folders)
